# wasm3-rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rust-toolchain  wasm_bin_builder.py
.github/workflows/: ci-audit.yml  ci-lint.yml  ci-test.yaml  rust.yml
examples/: call_wasm.rs  wasm_link.rs  wasm_link_closure.rs  wasm_link_closure_trap.rs  wasm_print.rs
examples/wasm/wasm-add/: Cargo.toml
examples/wasm/wasm-add/src/: lib.rs
examples/wasm/wasm_add/: Cargo.toml  wasm_add.wasm
examples/wasm/wasm_millis_to_seconds/: Cargo.toml  wasm_millis_to_seconds.wasm
examples/wasm/wasm_print/: Cargo.toml  wasm_print.wasm
examples/wasm/wasm_print/src/: lib.rs
src/: environment.rs  error.rs  function.rs  lib.rs  macros.rs  module.rs  runtime.rs  ty.rs  utils.rs  wasm3_priv.rs
tests/: rust_call_wasm.rs  wrapper_macro.rs
tests/wasm/wasm_add/: wasm_add.wasm
tests/wasm/wasm_add/src/: lib.rs
tests/wasm/wasm_millis_to_seconds/: wasm_millis_to_seconds.wasm
tests/wasm/wasm_millis_to_seconds/src/: lib.rs
tests/wasm/wasm_print/: Cargo.toml  wasm_print.wasm
tests/wasm_test_bins/: Cargo.toml  build.py  wasm_test_bins.wasm
tests/wasm_test_bins/src/: lib.rs
tests/wrapper_macro/: nonary_no_ret.rs  nonary_ret.rs  trapped.rs  unary_no_ret.rs  unary_ret.rs
wasm3-sys/: Cargo.toml  build.rs
wasm3-sys/src/: lib.rs
