[package]
name = "wasm3"
version = "0.1.0"
authors = ["Lukas Tobias Wirth <lukastw97@gmail.com>"]
edition = "2018"
description = "Rust bindings for blend2d"
homepage = "https://github.com/Veykril/blend2d-rs"
repository = "https://github.com/Veykril/blend2d-rs"
license = "MIT"
readme = "README.md"
categories = ["api-bindings"]
exclude = ["examples/*", "tests/*"]

[features]
default = ["wasi", "std", "use-32bit-slots"]

wasi = ["ffi/wasi"]
std = []
use-32bit-slots = ["ffi/use-32bit-slots"]

build-bindgen = ["ffi/build-bindgen"]

[dependencies]
cty = "0.2"

[dependencies.ffi]
path = "wasm3-sys"
package = "wasm3-sys"

[dev-dependencies]
trybuild = "1.0"

[package.metadata.docs.rs]
all-features = true

[workspace]
members = ["wasm3-sys"]
