[package]
name = "wasm3"
version = "0.5.0"
authors = ["Lukas Tobias Wirth <lukastw97@gmail.com>"]
edition = "2018"
description = "Rust bindings for wasm3"
homepage = "https://github.com/wasm3/wasm3-rs"
repository = "https://github.com/wasm3/wasm3-rs"
license = "MIT"
readme = "README.md"
categories = ["api-bindings"]
exclude = ["examples/*", "tests/*"]

[workspace]
members = ["wasm3-sys"]

[features]
default = ["wasi", "std", "use-32bit-slots"]

wasi = ["ffi/wasi"]
std = []
use-32bit-slots = ["ffi/use-32bit-slots"]

build-bindgen = ["ffi/build-bindgen"]

[dependencies]
cty = "0.2"

[dependencies.ffi]
version = "0.5.0"
path = "./wasm3-sys"
package = "wasm3-sys"

[dev-dependencies]
trybuild = "1.0"

[profile.release]
opt-level = 3
lto = true

[package.metadata.docs.rs]
all-features = true
