[package]
name = "wasm3"
version = "0.3.1"
authors = [
    "Oasis Protocol Foundation <info@oasisprotocol.org>",
    "Lukas Tobias Wirth <lukastw97@gmail.com>"
]
edition = "2018"
description = "Rust bindings for wasm3"
license = "MIT"
categories = ["api-bindings"]

[dependencies]
cty = "0.2"
thiserror = "1.0"
impl-trait-for-tuples = "0.2.1"

[dependencies.ffi]
path = "wasm3-sys"
package = "wasm3-sys"
default-features = false

[target.x86_64-fortanix-unknown-sgx.dependencies]
rs-libc = "0.2.3"

[features]
default = []
floats = ["ffi/floats"]
