[package]
name = "wasm3-sys"
version = "0.1.2"
authors = ["Lukas Tobias Wirth <lukastw97@gmail.com>"]
edition = "2018"
description = "Raw ffi bindings for wasm3"
homepage = "https://github.com/veykril/wasm3-rs"
repository = "https://github.com/veykril/wasm3-rs"
categories = ["external-ffi-bindings"]
build = "build.rs"
license = "MIT"
links = "wasm3"
include = ["wasm3/source/**/*", "src/**/*", "Cargo.toml", "build.rs"]

[features]
wasi = []
use-32bit-slots = []

[dependencies]
cty = "0.2"

[build-dependencies]
cc = "1"
shlex = "0.1.1"
bindgen = "0.58.1"

[package.metadata.docs.rs]
all-features = true
