[package]
name = "wasm3-sys"
version = "0.5.0"
authors = ["Lukas Tobias Wirth <lukastw97@gmail.com>"]
edition = "2018"
description = "Raw ffi bindings for wasm3"
homepage = "https://github.com/wasm3/wasm3-rs"
repository = "https://github.com/wasm3/wasm3-rs"
categories = ["external-ffi-bindings"]
build = "build.rs"
license = "MIT"
links = "wasm3"
include = ["wasm3/source/**/*", "src/**/*", "Cargo.toml", "build.rs"]

[features]
wasi = []
use-32bit-slots = []
build-bindgen = ["bindgen"]

[dependencies]
cty = "0.2"

[build-dependencies]
cc = "1"
shlex = "0.1.1"

[build-dependencies.bindgen]
version = "0.59"
optional = true

[package.metadata.docs.rs]
all-features = true
