[package]
name = "wasm3-sys"
version = "0.3.0"
authors = [
    "Oasis Protocol Foundation <info@oasisprotocol.org>",
    "Lukas Tobias Wirth <lukastw97@gmail.com>"
]
edition = "2018"
description = "Raw FFI bindings for wasm3"
categories = ["external-ffi-bindings"]
build = "build.rs"
license = "MIT"
links = "wasm3"
include = ["wasm3/source/**/*", "src/**/*", "Cargo.toml", "build.rs"]

[features]
use-32bit-slots = []
floats = []

[dependencies]
cty = "0.2"

[build-dependencies]
cc = "1"
shlex = "0.1.1"
bindgen = "0.58.1"

[package.metadata.docs.rs]
all-features = true
